<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/recipe_photo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/restaurant_menu100"
        />

    <!--Title of recipe-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_TextInputLayout">

          <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_editText"
            android:hint="@string/recipe_title"
            android:imeOptions="actionNext"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>


    <!--Category-->



    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categories_spinner"
        android:prompt="@string/category"
        >

    </Spinner>


    <!--Time-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_editText"
            android:hint="@string/recipe_detail_time"
            android:imeOptions="actionNext"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <!--Portions-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/portions_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/portions_editText"
            android:hint="@string/recipe_detail_portions"
            android:imeOptions="actionNext"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/movie_url_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_url_editText"
            android:hint="@string/recipe_detail_movie_url"
            android:imeOptions="actionDone"
            android:inputType="textUri"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
</ScrollView>
