<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar">
    </include>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        >

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/cook_white_grey100"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/user_photo_change_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/edit50"
            android:layout_margin="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profil_edit_name_TextInputLayout">

        <EditText
            android:id="@+id/profil_edit_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profil_edit_email_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profil_edit_email_editText"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profil_edit_old_password_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profil_edit_old_password_editText"
            android:hint="@string/hint_old_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profil_edit_new_password_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profil_edit_new_password_editText"
            android:hint="@string/hint_new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        />

</LinearLayout>