<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ingredient_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredient_name_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredient_name_editText"
            android:hint="@string/ingredient_name"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredient_quantity_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredient_quantity_editText"
            android:hint="@string/ingredient_quantity"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredient_measure_TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredient_measure_editText"
            android:hint="@string/ingredient_measure"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>